--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "faux-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://thatdevguy1.github.io/faux-dashboard",
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap-material-design": "^4.1.1",
+    "gh-pages": "^3.1.0",
     "highcharts": "^8.0.0",
     "highcharts-react-official": "^2.2.2",
     "node-sass": "^4.13.1",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
