--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "faux-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thatdevguy1.github.io/faux-dashboard",
+  "homepage": "https://thatdevguy1.github.io/faux-dashboard/",
   "dependencies": {
-    "@material-ui/core": "^4.9.1",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap-material-design": "^4.1.1",
+    "bootstrap-material-design": "^4.1.3",
     "gh-pages": "^3.1.0",
-    "highcharts": "^8.0.0",
+    "highcharts": "^8.2.2",
     "highcharts-react-official": "^2.2.2",
-    "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "node-sass": "^4.14.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.1"
   },
@@ -44,11 +44,11 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-standard": "^4.0.2"
   }
 }
