added a hashrouter to deal with the github pages name space

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "faux-dashboard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://thatdevguy1.github.io/faux-dashboard/",
+  "homepage": "https://thatdevguy1.github.io/faux-dashboard",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
